character limit and horizontal scroll fix

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,6 +13,7 @@
 #chat{
     height: 100vh;
     overflow-y: scroll;
+    overflow-wrap: break-word;
 }
 input{
     background-color: rgb(234, 234, 234);
